[metadata]
name = Hyperion_obf
version = 1.0.0
author = LeRatGondin
author_email = leratgondin1@gmail.com
description = Python obfuscator that use hyperion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LeRatGondin/Hyperion_obf
project_urls =
    Bug Tracker = https://github.com/LeRatGondin/Hyperion_obf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src